# OpenCL-Project-GameOfLife

./: CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md
src/: game_of_life.hpp  kernel.cl  main.cpp  timer.hpp
