CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( OpenCL_project )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )

FIND_PACKAGE( OpenCL REQUIRED )

INCLUDE_DIRECTORIES( ${OPENCL_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src )

ADD_EXECUTABLE( OpenCL_exe ${PROJECT_SOURCE_DIR}/src/main.cpp )

TARGET_LINK_LIBRARIES( OpenCL_exe ${OPENCL_LIBRARIES} )

ADD_CUSTOM_COMMAND( TARGET OpenCL_exe
    				POST_BUILD
    				COMMAND OpenCL_exe
    				WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/src)  # The kernel file is in the source folder